fix: opaque background on sticky tag search to hide scroll overflow

--- a/css/tag-manager.css
+++ b/css/tag-manager.css
@@ -123,7 +123,7 @@
   top: 0;
   z-index: 1;
   padding: 0.25rem;
-  background: inherit;
+  background: #30404d;
 }
 .tm-tag-control-search input {
   width: 100%;
